# amy-email-worker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: cicd_main.yml  production.yml
cdk/: README.md  cdk.json  package-lock.json  package.json
cdk/lib/: cron-stack.ts  github-oidc-stack.ts  lambda-stack.ts  types.ts  utils.ts  vpc-stack.ts
worker/: .dockerignore  .pre-commit-config.yaml  main.py  pyproject.toml
worker/src/: api.py  aws.py  database.py  email.py  handler.py  settings.py  ssm.py  token.py  types.py
worker/tests/: conftest.py  test_api.py  test_api_scheduledemailcontroller.py  test_database.py  test_email.py  test_handler.py  test_token.py  test_types.py  test_utils_database.py
worker/utils/: database.py  email.py  settings.py  ssm.py  types.py
