[tool.poetry]
name = "amy-email-worker"
version = "1.0.0"
description = "A lambda worker for sending queued emails at scheduled times."
authors = ["Carpentries Team <team@carpentries.org>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.26.146"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.16.1"}
pydantic = "^2.5.1"
httpx = "^0.26.0"
jinja2 = "^3.1.3"
markdown = "^3.6"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
types-boto3 = "^1.0.2"
pytest = "*"
pytest-asyncio = "^0.23.2"
flake8-pyproject = "^1.2.3"
types-markdown = "^3.6.0.20240316"

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.11"
strict = true

[tool.isort]
profile = "black"
force_sort_within_sections = true

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
